--- a/OnlineHelpDesk/OnlineHelpDesk.csproj
+++ b/OnlineHelpDesk/OnlineHelpDesk.csproj
@@ -113,6 +113,8 @@
     <Content Include="Views\Shared\About_layout.cshtml" />
     <Content Include="Views\Shared\Contact_layout.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Shared\Login_layout.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
