--- a/OnlineHelpDesk/Web.config
+++ b/OnlineHelpDesk/Web.config
@@ -36,6 +36,9 @@
   </runtime>
   <connectionStrings>
     <add name="OHDEntities" connectionString="metadata=res://*/OHD_DB.csdl|res://*/OHD_DB.ssdl|res://*/OHD_DB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-8GHAFNK\MSSQLSERVER01;initial catalog=OHD;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OHDEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-8GHAFNK\MSSQLSERVER01;initial catalog=OHD;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OHDEntities2" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-8GHAFNK\MSSQLSERVER01;initial catalog=OHD;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OHDEntities3" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-8GHAFNK\MSSQLSERVER01;initial catalog=OHD;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
